@@ -1,3 +1,7 @@
+2011-02-23  Ramon Novoa  <rnovoa@artica.es>
+
+	* build_deb.sh, build_rpm.sh: Updated to build from branches.
+
 2011-02-22  Ramon Novoa  <rnovoa@artica.es>
 
 	* build_windows_agent.sh: Updated to build from branches.
